--- a/DavidSerb.Domain/DavidSerb.Domain.csproj
+++ b/DavidSerb.Domain/DavidSerb.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DF33FB5-89D2-4D1B-914C-FE2A78BEF637}</ProjectGuid>
+    <ProjectGuid>{7A1FDF05-1EDD-4249-9B53-C8A58618C556}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DavidSerb.DataModel</RootNamespace>
-    <AssemblyName>DavidSerb.DataModel</AssemblyName>
+    <RootNamespace>DavidSerb.Domain</RootNamespace>
+    <AssemblyName>DavidSerb.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,13 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CorrelateData.cs" />
-    <Compile Include="Country.cs" />
-    <Compile Include="Depot.cs" />
-    <Compile Include="DrugType.cs" />
-    <Compile Include="DrugUnit.cs" />
+    <Compile Include="CorrelationService\BaseCorrelationService.cs" />
+    <Compile Include="CorrelationService\DepotCorrelationService .cs" />
+    <Compile Include="DepotInventoryService.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="IDepotInventoryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SystemDataSet.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DavidSerb.DataModel\DavidSerb.DataModel.csproj">
+      <Project>{7df33fb5-89d2-4d1b-914c-fe2a78bef637}</Project>
+      <Name>DavidSerb.DataModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
