--- a/DavidSerb.Domain/DavidSerb.Domain.csproj
+++ b/DavidSerb.Domain/DavidSerb.Domain.csproj
@@ -42,11 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CorrelationService\BaseCorrelationService.cs" />
-    <Compile Include="CorrelationService\DepotCorrelationService .cs" />
+    <Compile Include="CorrelationService\DepotCorrelationService.cs" />
     <Compile Include="DepotInventoryService.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IDepotInventoryService.cs" />
+    <Compile Include="ISiteDistributionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteDistributionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DavidSerb.DataModel\DavidSerb.DataModel.csproj">
