--- a/DavidSerb.DataModel/DavidSerb.DataModel.csproj
+++ b/DavidSerb.DataModel/DavidSerb.DataModel.csproj
@@ -287,17 +287,31 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CorrelateData.cs" />
     <Compile Include="Data\AppDbContext.cs" />
     <Compile Include="Migrations\20230928102930_InitialMigration.cs" />
     <Compile Include="Migrations\20230928102930_InitialMigration.designer.cs">
       <DependentUpon>20230928102930_InitialMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20231004081932_AddWeightToDrugType.cs" />
+    <Compile Include="Migrations\20231004081932_AddWeightToDrugType.designer.cs">
+      <DependentUpon>20231004081932_AddWeightToDrugType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20231004083656_DeleteWeightFromDrugType.cs" />
+    <Compile Include="Migrations\20231004083656_DeleteWeightFromDrugType.designer.cs">
+      <DependentUpon>20231004083656_DeleteWeightFromDrugType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20231004083916_RenameColumnWeightFromDrugType.cs" />
+    <Compile Include="Migrations\20231004083916_RenameColumnWeightFromDrugType.designer.cs">
+      <DependentUpon>20231004083916_RenameColumnWeightFromDrugType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AppDbContextModelSnapshot.cs" />
+    <Compile Include="Models\CorrelateData.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Depot.cs" />
+    <Compile Include="Models\DepotWeightViewModel.cs" />
     <Compile Include="Models\DrugType.cs" />
     <Compile Include="Models\DrugUnit.cs" />
+    <Compile Include="Models\GroupedDrugUnitsViewModel.cs" />
     <Compile Include="Models\Site.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemDataSet.cs" />
